Fixes image overflow in `molecules-tile-utility`

--- a/src/_patterns/30-molecules/tiles/tile~utility.css
+++ b/src/_patterns/30-molecules/tiles/tile~utility.css
@@ -25,6 +25,7 @@
   grid-template-columns: 1fr;
   grid-auto-rows: -webkit-min-content;
   grid-auto-rows: min-content;
+  overflow: hidden;
 }
 .tile-utility:not(.has-description) {
   grid-template-areas: "title";
